--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-FLASK_RUN_PORT=6666
 FLASK_ENV=development
-SQLALCHEMY_DATABASE_URI='postgresql://postgres:564732@34.67.88.123/loja_kenzie'
+SQLALCHEMY_DATABASE_URI='postgresql://[USERNAME]:[PASSWORD]@[DATABASE_HOST]/[DATABASE]'
 SQLALCHEMY_TRACK_MODIFICATIONS=0
